services/offers-app/offers-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: offers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offers
  template:
    metadata:
      labels:
        app: offers
    spec:
      containers:
      - name: loans
        image: gcr.io/bap-amer-select-demo2/offers:1.0.0
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
