services/offers-app/offers-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: offers
spec:
  ports:
   - port: 80
     targetPort: 8080
     protocol: TCP
  selector:
    app: offers
