services/offers-app/offers-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: offers
spec:
  hosts:
  - "apik8s.dynolab.io"
  gateways:
  - apik8s-gateway
  http:
  - match:
    - uri:
        exact: /offers
    route:
    - destination:
        host: offers
        port:
          number: 80
      headers:
        request:
          add:
            x-target-name: "offers-service"
    corsPolicy:
      allowOrigins:
      - exact: '*'
      allowMethods:
      - GET
      - POST
      - PUT
      - OPTIONS
      allowCredentials: false
      allowHeaders:
      - x-api-key
      maxAge: "24h"
